# dmp

./: .gitignore  CMakeLists.txt  package.xml
include/dmp/: dmp.h  fourier_approx.h  function_approx.h  radial_approx.h
launch/: dmp.launch
nodes/: demo.py  dmp_server.cpp
src/: dmp.cpp  fourier_approx.cpp  radial_approx.cpp
