<package>
  <name>dmp</name>
  <version>1.0.0</version>
  <description>dmp - dynamic movement primitives</description>
  <maintainer email="user@mail.com">Scott Niekum</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/dmp</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="user@mail.com">Scott Niekum</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>message_generation</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>

</package>
